--- a/style.css
+++ b/style.css
@@ -43,6 +43,7 @@ body {
 picture img {
   height: 342px;
   border-radius: 8px 8px 0 0;
+  display: block;
 }
 
 .content {
@@ -128,6 +129,7 @@ h1 {
     width: 18.75rem;
     height: 28.5rem;
     border-radius: 0.5rem 0 0 0.5rem;
+    
   }
 
   .content {
